feat[21]: add pagination to get images by approval status
