# internal/application/dto/response/Image.go
@@ -8,4 +8,5 @@ type Image struct {
 	URL         string    `json:"url"`
 	CreatedTime time.Time `json:"created_time"`
 	IsApproved  bool      `json:"is_approved"`
+	ContentType string    `json:"content_type"`
 }
